[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Levels/Menu.gd" type="Script" id=1]
[ext_resource path="res://GFX/Enviroment/water.png" type="Texture" id=2]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GFX/Player/plane_left.png" type="Texture" id=4]
[ext_resource path="res://SFX/GameSounds_v1/menu klik.wav" type="AudioStream" id=5]
[ext_resource path="res://GFX/Player/plane_right.png" type="Texture" id=6]
[ext_resource path="res://SFX/GameSounds_v1/OST - menu.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="Animation" id=3]

resource_name = "load_new_level"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "load_new_level"
} ]
}

[node name="Menu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1281.0
margin_bottom = 732.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 223.0
margin_top = 36.0
margin_right = 1068.0
margin_bottom = 602.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="Label" type="Label" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 259.0
margin_top = 251.0
margin_right = 586.0
margin_bottom = 315.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Retard Ride"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="NewGame" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 537.0
margin_top = 386.0
margin_right = 624.0
margin_bottom = 454.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="NewGame" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.0
margin_top = 8.0
margin_right = 257.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "New Game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "custom_fonts" ]

[node name="Click" type="AudioStreamPlayer" parent="NewGame" index="1"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Exit" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 535.0
margin_top = 480.0
margin_right = 622.0
margin_bottom = 548.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="Exit" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.0
margin_top = 10.0
margin_right = 257.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Exit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "custom_fonts" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 7 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/load_new_level = SubResource( 3 )
blend_times = [  ]

[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]


